# onnx-graph-builder

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  lint.yml
onnx_graph_builder/: __init__.py
