[tool.poetry]
name = "onnx-graph-builder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "onnx_graph_builder"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-assertive = "^2.1.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.9.11"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.6.0"
flake8-encodings = "^0.5.0.post1"
flake8-import-order = "^0.18.1"
flake8-noqa = "^1.2.9"
flake8-pyi = "^22.8.2"
flake8-pylint = "^0.1.3"
flake8-type-checking = "^2.1.3"
isort = "^5.10.1"
mypy = "^0.971"
pep8-naming = "^0.13.2"
pylint = "^2.15.2"
pytest = "^7.1.3"
pytest-xdist = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
